--- a/Rebus.Forklift.AzureServiceBus/packages.config
+++ b/Rebus.Forklift.AzureServiceBus/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GoCommando" version="0.3" targetFramework="net45" />
-  <package id="Rebus" version="0.99.74" targetFramework="net45" />
+  <package id="Rebus" version="2.0.0-a5" targetFramework="net45" />
   <package id="Rebus.Forklift.Common" version="2.0.0-a1" targetFramework="net45" />
 </packages>
