--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -65,7 +65,8 @@
     <Compile Include="Config\AzureServiceBusTransportSettings.cs" />
     <Compile Include="Config\DisabledTimeoutManager.cs" />
     <Compile Include="MsgHelpers.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo_Patch.cs" />
+    <None Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Retrier.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +76,9 @@
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>$(ProjectDir)\..\scripts\patch_assemblyinfo.cmd $(ProjectDir)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
