--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.nuspec
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.nuspec
@@ -14,7 +14,7 @@
     <tags>rebus azure azure-service-bus</tags>
     <iconUrl>https://github.com/mookid8000/Rebus/raw/master/artwork/little_rebusbus2_copy-200x200.png</iconUrl>
     <dependencies>
-        <dependency id="Rebus" version="2.0.0-a11" />
+        <dependency id="Rebus" version="2.0.0-b02" />
         <dependency id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" />
         <dependency id="WindowsAzure.ServiceBus" version="3.3.2" />
     </dependencies>
