--- a/Rebus.Forklift.AzureServiceBus/Rebus.Forklift.AzureServiceBus.csproj
+++ b/Rebus.Forklift.AzureServiceBus/Rebus.Forklift.AzureServiceBus.csproj
@@ -38,12 +38,12 @@
       <HintPath>..\packages\GoCommando.0.3\lib\net35\GoCommando.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Rebus, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rebus.2.0.0-b02\lib\NET45\Rebus.dll</HintPath>
+    <Reference Include="Rebus, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rebus.2.0.1\lib\NET45\Rebus.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Rebus.Forklift.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rebus.Forklift.Common.2.0.0-a1\lib\NET45\Rebus.Forklift.Common.dll</HintPath>
+    <Reference Include="Rebus.Forklift.Common, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rebus.Forklift.Common.2.0.1\lib\NET45\Rebus.Forklift.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
