--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{DD32B8FB-6D0D-4FF1-9659-EDAA6DB5A93F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rebus.AzureServiceBus</RootNamespace>
+    <RootNamespace>Rebus</RootNamespace>
     <AssemblyName>Rebus.AzureServiceBus</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.ServiceBus, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAzure.ServiceBus.3.4.0\lib\net45-full\Microsoft.ServiceBus.dll</HintPath>
+      <HintPath>..\packages\WindowsAzure.ServiceBus.3.4.3\lib\net45-full\Microsoft.ServiceBus.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -57,17 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsbStringExtensions.cs" />
-    <Compile Include="AzureServiceBusTransport.cs" />
-    <Compile Include="BasicAzureServiceBusTransport.cs" />
+    <Compile Include="AzureServiceBus\AsbStringExtensions.cs" />
+    <Compile Include="AzureServiceBus\AzureServiceBusTransport.cs" />
+    <Compile Include="AzureServiceBus\BasicAzureServiceBusTransport.cs" />
     <Compile Include="Config\AzureServiceBusConfigurationExtensions.cs" />
     <Compile Include="Config\AzureServiceBusMode.cs" />
     <Compile Include="Config\AzureServiceBusTransportSettings.cs" />
-    <Compile Include="Config\DisabledTimeoutManager.cs" />
-    <Compile Include="MsgHelpers.cs" />
+    <Compile Include="AzureServiceBus\DisabledTimeoutManager.cs" />
+    <Compile Include="AzureServiceBus\MsgHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo_Patch.cs" />
     <None Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Retrier.cs" />
+    <Compile Include="AzureServiceBus\Retrier.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
