--- a/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
+++ b/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
@@ -34,9 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rebus.AzureServiceBus\Rebus.AzureServiceBus.csproj" />
-    <PackageReference Include="nunit" Version="3.6.1" />
-    <PackageReference Include="rebus" Version="4.0.0-b10" />
-    <PackageReference Include="rebus.tests.contracts" Version="4.0.0-b10" />
+    <PackageReference Include="nunit" Version="3.7.1" />
+    <PackageReference Include="rebus" Version="4.0.0" />
+    <PackageReference Include="rebus.tests.contracts" Version="4.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Configuration" />
