--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -47,7 +47,7 @@
     <None Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Rebus" Version="4.0.0-b10" />
+    <PackageReference Include="Rebus" Version="4.0.0" />
     <PackageReference Include="windowsazure.servicebus" Version="4.0.0" />
   </ItemGroup>
   <ItemGroup>
