--- a/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
+++ b/Rebus.AzureServiceBus.Tests/Rebus.AzureServiceBus.Tests.csproj
@@ -40,8 +40,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Rebus.AzureServiceBus\Rebus.AzureServiceBus.csproj" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.0" />
-    <PackageReference Include="rebus" Version="5.0.0-b14" />
-    <PackageReference Include="rebus.tests.contracts" Version="4.2.1" />
+    <PackageReference Include="rebus" Version="5.0.0" />
+    <PackageReference Include="rebus.tests.contracts" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Configuration" />
