require microsoft.azure.amqp 2.4.2 directly to avoid reconnection bug in previous versions of that package

--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -41,6 +41,7 @@
     <None Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="microsoft.azure.amqp" Version="2.4.2" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.2.1" />
     <PackageReference Include="Rebus" Version="5.0.0" />
   </ItemGroup>
