--- a/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
+++ b/Rebus.AzureServiceBus/Rebus.AzureServiceBus.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 		<RootNamespace>Rebus</RootNamespace>
-		<LangVersion>10</LangVersion>
+		<LangVersion>11</LangVersion>
 		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 		<Authors>mookid8000</Authors>
 		<PackageProjectUrl>https://rebus.fm/what-is-rebus/</PackageProjectUrl>
@@ -16,8 +16,8 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="azure.identity" Version="1.8.2" />
-		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.12.0" />
-		<PackageReference Include="Rebus" Version="6.6.5" />
+		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.13.1" />
+		<PackageReference Include="Rebus" Version="8.0.0-alpha01" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\artwork\little_rebusbus2_copy-500x500.png">
